fix(theme): format of selected text makes it invisible

--- a/assets/sass/components/_global.scss
+++ b/assets/sass/components/_global.scss
@@ -19,7 +19,7 @@ h1 {
 }
 
 ::-moz-selection,::selection {
-    background-color: theme-color("aubergine");
+    background-color: theme-color("redish");
     color: theme-color("yellowish");
 }
 
